<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_performance_tests</name>
  <version>0.1.0</version>
  <description>A package that tests the performance of rmf components</description>
  <maintainer email="grey@openrobotics.org">Grey</maintainer>
  <license>Apache License 2.0</license>

  <depend>rmf_traffic</depend>
  <depend>rmf_fleet_adapter</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>building_map_tools</buildtool_depend>
  <buildtool_depend>ros2run</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
